syntax = "proto3";
package proto;

option go_package = ".;proto";

import "google/protobuf/timestamp.proto";
import "ws.enums.proto";

message CMsgProtoBufHeader {
  bytes UserHash        = 1;
  bytes IpAddr          = 2;
  int32 SessionClientId = 3;
  bytes AuthToken       = 4;
}

message MsgEvent {
  EMSG   type = 1;
  bytes  data = 2;
  google.protobuf.Timestamp created_at = 3;
}
